# starknet-rs-c-bindings

./: Cargo.toml
src/: lib.rs
starknet-c-bindings/: .gitignore  Cargo.toml  build.sh
starknet-c-bindings/src/: lib.rs
