[package]
name = "starknet-c-bindings"
version = "0.2.0"
authors = ["Bartosz Rybarski"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
description = """
Low-level cryptography utilities for StarkNet
"""
keywords = ["ethereum", "starknet", "web3"]

[lib]
crate-type = ["staticlib"]

[dependencies]
starknet-crypto = { version = "0.2.0", path = "../starknet-crypto" }
starknet-ff = { version = "0.2.0", path = "../starknet-ff" }

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false }
hex = "0.4.3"
hex-literal = "0.3.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"